<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.1.1</version>
    <relativePath/>
  </parent>

  <groupId>com.gpt</groupId>
  <artifactId>SpringBonk</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>

  <modules>
    <module>spring-resource</module>
    <module>spring-bff</module>
    <module>spring-ooze</module>
    <module>spring-decks</module>
    <module>jpss-resource</module>
    <module>microgpt-comms</module>
  </modules>

  <properties>
    <java.version>26</java.version>
    <spring.cloud.version>2025.1.3</spring.cloud.version>
    <maven.compiler.version>3.16.0</maven.compiler.version>
    <lombok.version>1.18.48</lombok.version>
    <spring-addons.version>9.2.0</spring-addons.version>
    <keycloak.version>26.0.12</keycloak.version>
    <commons-io.version>2.22.0</commons-io.version>
    <springdoc.version>3.1.1</springdoc.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Shared Dependencies -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit-jupiter.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>${spring.cloud.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
      <!-- keycloak-admin-client pulls resteasy-multipart-provider, which still
           depends on commons-io 2.11.0 (GHSA-78wr-2p64-hpwj). Keycloak has not
           moved its resteasy version, so pin commons-io here until it does. -->
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <!-- spring-boot-starter-actuator and spring-boot-devtools are intentionally
           not managed here: the Spring Boot BOM (via the parent) already provides
           their versions. Re-declaring them version-less would shadow the BOM and
           break resolution for any module that depends on them. -->
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <!-- Shared Plugins -->
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.version}</version>
          <configuration>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <parameters>true</parameters>
            <annotationProcessorPaths>
              <path>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </path>
            </annotationProcessorPaths>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
